# subgraphGenerator

./: .env.example  .gitignore  PONDER_PLAN.md  README.md  architecture.md  development_checklist.md  pyproject.toml
.github/workflows/: test.yml
context/: context.md
docs/: architecture.md  config-format.md  development-notes.md  user-guide.md  visual-editor-architecture.md
examples/: .gitkeep
examples/basic-single-contract/: subgraph-config.json
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CanvasLibraryPanel.jsx  GenerateModal.jsx  HelpPanel.jsx  NetworksPanel.jsx  SaveAsDialog.jsx  SimulatePanel.jsx  Toolbar.jsx  UnsavedChangesDialog.jsx  ValidationPanel.jsx
frontend/src/hooks/: useAutoLayout.js  useAutoLayout.test.js  useValidation.js
frontend/src/nodes/: AggregateEntityNode.jsx  ConditionalNode.jsx  ContractNode.jsx  ContractReadNode.jsx  EntityNode.jsx  MathNode.jsx  StringConcatNode.jsx  TypeCastNode.jsx
frontend/src/utils/: getKnownHandles.js  getKnownHandles.test.js
src/subgraph_wizard/: __init__.py  __main__.py  cli.py  errors.py  interactive_wizard.py  logging_setup.py  main.py  networks.py  server.py
src/subgraph_wizard/abi/: __init__.py  etherscan.py  local.py  paste.py  utils.py
src/subgraph_wizard/config/: __init__.py  io.py  model.py  validation.py
src/subgraph_wizard/generate/: __init__.py  graph_compiler.py  graph_simulator.py  graph_utils.py  mappings_auto.py  mappings_stub.py  networks_json.py  orchestrator.py  package_json.py  ponder_compiler.py  ponder_config.py  ponder_schema.py  project_layout.py  readme.py  schema.py  subgraph_yaml.py  validator.py
src/subgraph_wizard/static/: index.html
src/subgraph_wizard/static/assets/: index-3cuiVcEa.js  index-6SCbIV_8.css  index-B2SzI-nW.js  index-BJWdPOQv.js  index-BKMARr8O.js  index-BKUldU8r.js  index-BLUeIuG7.js  index-BMKn-BFe.js  index-BMNNxJAi.js  index-BNhDA-g9.js  index-BUkOmy47.js  index-Bgs5hMtT.css  index-BhNsicNk.js  index-BnQpNhgJ.js  index-BvT4BrEC.js  index-CIDRYnUL.css  (+19 more)
src/subgraph_wizard/utils/: fs_utils.py  prompts_utils.py  templating.py
templates/: .gitkeep  README.generated.md.j2  package.json.j2  subgraph.yaml.j2  subgraph.yaml.visual.j2
templates/mappings/: common_header.ts.j2  mapping_auto.ts.j2  mapping_stub.ts.j2
templates/schema/: base_schema.graphql.j2
tests/: __init__.py  test_abi_etherscan.py  test_abi_read_functions.py  test_abi_sources.py  test_basic_generation_flow.py  test_cli.py  test_config_io.py  test_etherscan_deployment_block.py  test_full_generation_advanced.py  test_full_generation_basic.py  test_full_generation_ponder.py  test_generate_mappings_advanced.py  test_generate_mappings_auto_with_abi.py  test_generate_mappings_stub.py  test_generate_package_json.py  test_generate_project_layout.py  test_generate_readme.py  test_generate_schema_auto_with_abi.py  test_generate_subgraph_yaml.py  test_generate_subgraph_yaml_advanced.py  test_generate_subgraph_yaml_intermediate.py  test_graph_compiler.py  test_graph_simulator.py  test_interactive_wizard_advanced.py  test_interactive_wizard_basic.py  test_networks_json.py  test_ponder_compiler.py  test_ponder_config.py  test_ponder_schema.py  test_server.py  test_smoke_imports.py  test_validation.py  test_validator.py  test_visual_subgraph_yaml.py
tests/fixtures/: Factory.json  Pair.json  SampleToken.json  advanced_config.json  basic_config.json
