[project]
name = "subgraph-wizard"
version = "0.1.0"
description = "A modular, extensible Python-based tool that interactively generates ready-to-deploy subgraph projects for The Graph"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
subgraph-wizard = "subgraph_wizard.main:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
